Coffee shop 15: minor fix to background hero image. Added flex wrap to the page nav bar to support iphone 5.

--- a/css/menu.css
+++ b/css/menu.css
@@ -41,9 +41,8 @@
 }
 
 .hero__image {
-    width: 100%;
-    min-width: 50rem;
-    height: 72rem ;
+
+    max-height: 72rem ;
     align-self: center;
 }
 
@@ -59,6 +58,7 @@
     width: 100%;
     height: 5rem;
     display: flex;
+    flex-wrap: wrap;
     font-size: 1.4rem;
     font-weight: 400;
     list-style-type: none;
